--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "knex": "^2.4.2",
+    "pg": "^8.10.0",
+    "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
