--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "speakeasy": "^2.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
